force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_Address1__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_Address1__c</fullName>
    <label>Address 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>