force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_AgendaLink__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_AgendaLink__c</fullName>
    <label>Agenda Link</label>
    <type>Url</type>
</CustomField>