force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_ArchiveDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_ArchiveDate__c</fullName>
    <label>Archive Date</label>
    <type>Date</type>
</CustomField>