force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_Category__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_Category__c</fullName>
    <label>Category</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>