force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_City__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_City__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>