force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_Code__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_Code__c</fullName>
    <label>Code</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>