force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_CountryCode__c</fullName>
    <label>Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>