force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_CountryName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_CountryName__c</fullName>
    <label>Country Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>