force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_CreationDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_CreationDate__c</fullName>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>