force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_CurrencyName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_CurrencyName__c</fullName>
    <label>Currency Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>