force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_Description__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_Description__c</fullName>
    <label>Description</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>