force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_EndDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>