force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_EventFormat__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_EventFormat__c</fullName>
    <label>Event Format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>