force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_EventStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_EventStub__c</fullName>
    <externalId>true</externalId>
    <label>Event Stub</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>