force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_InvitationLink__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_InvitationLink__c</fullName>
    <label>Invitation Link</label>
    <type>Url</type>
</CustomField>