force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_LastModifiedDate__c</fullName>
    <label>Last Modified Date</label>
    <type>Date</type>
</CustomField>