force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_LaunchDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_LaunchDate__c</fullName>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>