force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_Location__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_Location__c</fullName>
    <label>Location</label>
    <length>160</length>
    <type>Text</type>
</CustomField>