force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_PlannerCompany__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_PlannerCompany__c</fullName>
    <label>Planner Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>