force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_PlannerEmail__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_PlannerEmail__c</fullName>
    <label>Planner Email</label>
    <type>Email</type>
</CustomField>