force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_PlannerPrefix__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_PlannerPrefix__c</fullName>
    <label>Planner Prefix</label>
    <length>30</length>
    <type>Text</type>
</CustomField>