force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_PlanningStatus__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_PlanningStatus__c</fullName>
    <label>Planning Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>