force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>