force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_RegistrationDeadlineDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_RegistrationDeadlineDate__c</fullName>
    <label>Registration Deadline Date</label>
    <type>Date</type>
</CustomField>