force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_RegistrationLink__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_RegistrationLink__c</fullName>
    <label>Registration Link</label>
    <type>Url</type>
</CustomField>