force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_StartDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>