force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_StateCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_StateCode__c</fullName>
    <label>State Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>