force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_SummaryLink__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_SummaryLink__c</fullName>
    <label>Summary Link</label>
    <type>Url</type>
</CustomField>