force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_TimeZoneAbbreviation__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_TimeZoneAbbreviation__c</fullName>
    <label>Time Zone Abbreviation</label>
    <length>5</length>
    <type>Text</type>
</CustomField>