force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_Title__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>