force-app/main/default/objects/CventEvents__Event__c/fields/CventEvents__pkg_TypeName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_TypeName__c</fullName>
    <label>Registration Is Open To</label>
    <length>30</length>
    <type>Text</type>
</CustomField>