force-app/main/default/objects/CventEvents__Event__c/listViews/CventEvents__All.listView-meta.xml
<ListView>
    <fullName>CventEvents__All</fullName>
    <columns>NAME</columns>
    <columns>CventEvents__pkg_Title__c</columns>
    <columns>CventEvents__pkg_Status__c</columns>
    <columns>CventEvents__pkg_Code__c</columns>
    <columns>CventEvents__pkg_StartDate__c</columns>
    <columns>CventEvents__pkg_StartTime__c</columns>
    <columns>CventEvents__pkg_TimeZone__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CventEvents__pkg_CreationDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>